Updated Dashboard -fixed footer overflow

--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -1,14 +1,9 @@
-/* Dashboard container */
-body, html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-.dashboard {
+
+  .dashboard {
     display: flex;
     height: 100vh;
     font-family: Arial, sans-serif;
+    /* padding-top: 20px; */
   }
   
   /* Sidebar */
@@ -18,8 +13,11 @@ body, html {
     color: white;
     padding: 20px;
     transition: width 0.3s ease;
+    height: calc(100vh - 80px); /* Reduce height by header height */
+    min-height: 100vh;
+    left: 0;
   }
-  
+
   .sidebar.collapsed {
     width: 60px;
     overflow: hidden;
@@ -44,6 +42,7 @@ body, html {
   .dropdown {
     position: relative;
     margin-bottom: 20px;
+    z-index: 0;
   }
   
   .dropdown-btn {
@@ -62,7 +61,6 @@ body, html {
     width: 100%;
     top: 100%;
     left: 0;
-    z-index: 10;
   }
   
   .dropdown:hover .dropdown-content {
@@ -80,26 +78,27 @@ body, html {
     background: #1abc9c;
   }
   
-  /* Main Content */
   .main-content {
     flex-grow: 1;
     padding: 20px;
     background-color: #ecf0f1;
+    transition: margin-left 0.3s ease;
   }
   
   .main-content h1 {
     color: #2c3e50;
   }
   
+
   /* Table Styles */
   .dashboard-table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 30px;
     background: white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
   /* Table Header */
@@ -142,12 +141,14 @@ body, html {
 
   .dashboard-table button {
     all: unset; /* Reset all button styles */
-    display: inline; /* Behave like normal text */
+    display: block; /* Behave like normal text */
+    width: 95%;
     color: #2980b9;
     text-decoration: none;
     font-weight: bold;
     padding: 8px 12px;
     color: #2980b9;
+    cursor: pointer;
 
   }
   .back-button-container {
